# -krepost-v2-3-1--

./: .gitignore  RESTRUCTURE_QUESTIONS.md  RESTRUCTURE_REPORT.md  pyproject.toml
.github/workflows/: compile.yml  trigger.txt  trigger2.yml  trigger3.yml  trigger4.yml  trigger_after_string_fix.yml  trigger_check.yml  trigger_compile.yml  trigger_compile_new.yml  trigger_compile_new2.yml  trigger_compile_new3.yml  trigger_final.yml
Krepost/02-COMPONENTS/MODELS/: Qwen3Guard-4B.md
Krepost/03-ROADMAP/: ROADMAP-v2.1.md
_trash/: MODEL_CHOICE_V1_2.md  README.md  ULTIMATE_RAG_OBSIDIAN.md
docs/: ROADMAP-v2.0.md
docs/architecture/general/: KREPOST_FULL_SOURCE.md  RLHF_MATH.md  SELF_IMPROVEMENT_LOOP.md  STACK_REGISTRY.md
docs/architecture/models/: MODEL_CHOICE_V1_3.md
docs/architecture/rag/: RAG_FINAL_V2.md  RAG_IMPLEMENTATION.md
docs/architecture/training/: TRAINING_CONTINUOUS_LEARNING.md  TRAINING_SANDBOX.md
docs/components/ingestion/: DOCUMENT_INGESTION_V2_1.md
docs/obsidian/: CALLOUT_DESIGNER.md  EXCALIDRAW_DIAGRAM_DESIGNER.md  HYBRID_JSON_WORKFLOW_N8N.md  VENICE_AI_SERVICE.md
docs/other/: ADDITIONAL_SCHEME_GUARD.md  FINAL_VERSION_2_3.md  TRUE_HACK_AI.md
docs/prompts/: INTERNAL_AUDIT_GROK.md  KREPOST_BUILDER_PROMPT.md  TEACHER_COT_FEWSHOT.md  TRAINING_REPLAY_BUFFER_PER_DETAILS.md
research/: .gitattributes
scripts/: krepost_codeloop.py  rss_analyzer.py  summarize_by_stage.py
src/krepost/: MASTER_PLAN.py  app.py  config.py  health.py  monitoring.py  security.py
tests/: test_frontmatter.py  test_per_buffer.py  test_security.py  test_trust_registry.py
(+14 files in other folders)
