[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "krepost"
version = "2.1.0"
description = "Локальная приватная многоагентная ИИ-система безопасности"
requires-python = ">=3.11"

dependencies = [
    "loguru>=0.7",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "PyYAML>=6.0",
    "aiohttp>=3.9",
    "numpy>=1.26",
    "sentence-transformers>=2.7",
]

[project.optional-dependencies]
ingestion = [
    "PyMuPDF>=1.24",
    "python-docx>=1.1",
    "beautifulsoup4>=4.12",
    "EbookLib>=0.18",
    "pytesseract>=0.3",
    "watchdog>=4.0",
]
scripts = [
    "anthropic>=0.30",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
all = [
    "krepost[ingestion,scripts,dev]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
